--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
     "node-sass": "^4.13.1",
+    "npm": "^6.14.4",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "start": "^5.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
