--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-favicon": "0.0.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "start": "^5.1.0",
