--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "start": "^5.1.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
