--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-contextmenu": "^2.13.0",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "react-router-dom": "^5.1.2",
