--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-contexify": "^4.1.1",
+    "react-contextify": "^0.1.0",
     "react-contextmenu": "^2.13.0",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
