--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
+    "apollo-upload-client": "^13.0.0",
     "graphql": "^15.0.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.5",
@@ -23,6 +24,7 @@
     "react-contextify": "^0.1.0",
     "react-contextmenu": "^2.13.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-favicon": "0.0.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
