--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
@@ -20,6 +21,7 @@
     "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-beautiful-dnd": "^13.0.0",
     "react-contexify": "^4.1.1",
     "react-contextify": "^0.1.0",
     "react-contextmenu": "^2.13.0",
