--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "react-contexify": "^4.1.1",
     "react-contextify": "^0.1.0",
     "react-contextmenu": "^2.13.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-favicon": "0.0.18",
